--- a/Lab10/lab-10-ann-cnn.ipynb
+++ b/Lab10/lab-10-ann-cnn.ipynb
@@ -584,17 +584,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Try CNN on \"Fruit\" dataset. Also modify number of layers and observe the performance difference: \n",
-        "\n",
-        "https://www.kaggle.com/moltean/fruits\n",
-        "\n",
-        "\n",
-        "Or (In a case if you don't have that much dataPack available, download 20 images of apple and 20 images of orange from the internet and work on it with RANDOM state=Rollnumber stratergy, 80-20% training-testing division)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "Try CNN on \"Fruit\" dataset. Also modify number of layers and observe the performance difference: \r\n",
+        "\r\n",
+        "https://www.kaggle.com/moltean/fruits\r\n",
+        "\r\n",
+        "\r\n",
+        "Or (In a case if you don't have that much dataPack available, download 20 images of apple and 20 images of orange from the internet and work on it with RANDOM state=Rollnumber stratergy, 80-20% training-testing division)\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n",
+        "\r\n"
       ],
       "metadata": {
         "id": "tCuk3R3y5kx9"
